# stella

./: CMakeLists.txt
src/: VisitTypeCheck.cpp  VisitTypeCheck.h
src/Stella/: Lexer.C  TestStella
tests/StrangeTestsWeek1/: my-test.stella  simple-if.stella  simple-succ.stella  simple-types.stella  succ-with-func.stella
tests/extended_tests/ill-typed/: added-test-1.stella  added-test-2.stella  argument-type-mismatch-4.stella  bad-abstraction.stella  bad-add-1.stella  bad-cmp-1.stella  bad-cmp-2.stella  bad-cmp-3.stella  bad-cmp-4.stella  bad-cmp-5.stella  bad-cmp-6.stella  bad-factorial-1.stella  bad-factorial-2.stella  bad-factorial.stella  bad-function-call.stella  bad-higher-order-1.stella  bad-if-3.stella  bad-if-4.stella  bad-if-and-undefined-variable-1.stella  bad-iszero.stella  bad-logic-and-1.stella  bad-logic-not-1.stella  bad-logic-or-1.stella  bad-multiply-1.stella  bad-nat-1.stella  bad-nat-2.stella  bad-nat-rec-1.stella  bad-nat-rec-2.stella  bad-return-type.stella  function-mismatch.stella  invalid-not_.stella  my-factorial.stella  my-ill-test-2.stella  my-ill-typed-1.stella  my-ill-typed-2.stella  my-mismatch.stella  shadowed-variable-2.stella  undefined-variable-3.stella
tests/extended_tests/well-typed/: abstract-function.stella  added-test-1.stella  added-test-2.stella  apply-increase.stella  applying-actual-function-3.stella  cubes.stella  decrement_twice.stella  double-application.stella  good-if-2.stella  good-if.stella  good-succ-1.stella  good-succ-2.stella  higher-order-2.stella  increment-triple.stella  inner-if.stella  many-if.stella  my-good-if.stella  my-test-2.stella  my-well-typed-1.stella  my-well-typed-2.stella  negate.stella  nested.stella  shadowed-variable-2.stella
tests/letrecs/ill-typed/: bad-letrec-2.stella
tests/letrecs/well-typed/: letrec-1.stella  letrec-2.stella
tests/lets/ill-typed/: bad-let-1.stella  bad-let-2.stella
tests/lets/well-typed/: let-1.stella  let-2.stella
tests/lists/ill-typed/: bad-lists-1.stella  bad-lists-2.stella
tests/lists/well-typed/: lists-2.stella  lists-3.stella
tests/pairs/ill-typed/: bad-pairs-2.stella  bad-pairs-3.stella  bad-pairs-4.stella
tests/records/ill-typed/: bad-records-2.stella
tests/records/well-typed/: records-2.stella
tests/recursions/ill-typed/: bad-fix.stella  bad-general-recursion.stella
tests/recursions/well-typed/: fix.stella  general-recursion.stella
tests/structurals/ill-typed/: structure-patterns.stella
tests/structurals/well-typed/: structure-patterns.stella
tests/sum-types/ill-typed/: bad-sum-types-2.stella  bad-sum-types-3.stella  bad-sum-types-4.stella  bad-sum-types-5.stella
tests/sum-types/well-typed/: sum-types-3.stella
tests/tuples/ill-typed/: bad-tuples-2.stella
tests/tuples/well-typed/: tuples-2.stella
tests/typealiases/ill-typed/: wrong-double-alias.stella  wrong-simple-alias.stella
tests/typealiases/well-typed/: double-alias.stella  simple-alias.stella
tests/units/ill-typed/: bad_ignore.stella
tests/units/well-typed/: ignore.stella
tests/variants/ill-typed/: bad-variants-2.stella  bad-variants-3.stella
tests/variants/well-typed/: variants-3.stella
